--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -7,7 +7,7 @@
 <body>
 <center>
 <h1>Result</h1>
-<p th:text="'Inserted: ' + ${greeting.first} +  ' ' + ${greeting.last}" />
+<p th:text="'Inserted: ' + ${person.firstName} +  ' ' + ${person.lastName}" />
 <p></p>
     <h1><p>All Guests</p></h1>
 <p th:text="${all}" />
